# src/swagger_output.json
@@ -315,12 +315,10 @@
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/TransactionParty"
-              }
+              "schema": {}
             }
           },
-          "description": "TransactionParty",
+          "description": "",
           "required": false
         },
         "responses": {
